--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>This is Deb's github page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f9; color: #333; }
+        header { background-color: #4CAF50; color: white; padding: 1rem; text-align: center; }
+        main { padding: 2rem; text-align: center; }
+        button { padding: 0.5rem 1rem; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        footer { background-color: #333; color: white; padding: 1rem; text-align: center; }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Cool Homepage</h1>
+    </header>
+    <main>
+        <h2>About This Page</h2>
+        <p>This is my awesome homepage where I share cool stuff!</p>
+        <button>Click Me!</button>
+    </main>
+    <footer>
+        <p>&copy; 2023 My Cool Website. All rights reserved.</p>
+    </footer>
+</body>
+</html>
