--- a/itis3135.html
+++ b/itis3135.html
@@ -14,15 +14,15 @@
 </head>
 <body>
     <header>
-        <h1>ITIS3135 Deb Samanta's Websits </h1>
+        <h1>Deb Samanta ITIS 3135</h1>
     </header>
     <main>
-        <h2>About This Page</h2>
-        <p>This is my awesome homepage where I share cool stuff!</p>
+        <h2>ITIS 3135 Home</h2>
+        <p>This is all the content for my ITIS 3135 class</p>
         <button>Click Me!</button>
     </main>
     <footer>
-        <p>&copy; 2023 My Cool Website. All rights reserved.</p>
+        <p>Designed by SamantaCorp. All rights reserved.</p>
     </footer>
 </body>
 </html>
