--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>ITIS3135 Deb Samanta's Websits </h1>
+        <h1>ITIS3135 Deb Samanta's Website </h1>
     </header>
     <main>
         <h2>About This Page</h2>
