--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <main>
         <h2>About This Page</h2>
         <p>This is my awesome homepage where I share cool stuff!</p>
-        <button>Click Me!</button>
+        
+          <a href="itis3135/coursepage.html">Course Page</a>
     </main>
+  
     <footer>
         <p>&copy; 2023 My Cool Website. All rights reserved.</p>
     </footer>
