--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <a href="itis3135/coursepage.html">Course Page</a>
     </main>
   
-    
+    <footer>
+        <p>Designed by Deb Samanta. All rights reserved.</p>
+    </footer>
 </body>
 </html>
