--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <p>This is my awesome homepage where I share cool stuff!</p>
         
           <a href="itis3135/coursepage.html">Course Page</a>
+          <a href="https://github.com/dsamanta12344" target="_blank" rel="noopener noreferrer">Github</a>
+          <a href="https://dsamanta12344.github.io" target="_blank" rel="noopener noreferrer"> GitHub.io</a>
+    <a href="https://webpages.charlotte.edu/dsamanta/" target="_blank" rel="noopener noreferrer"> UNCC </a>
+    <a href="https://www.linkedin.com/in/deb-samanta-a7157037b/" target="_blank" rel="noopener noreferrer"> LinkedIn </a>
+
+
+  
+
     </main>
   
     <footer>
