--- a/itis3135/SamantaCorp.com/index.html
+++ b/itis3135/SamantaCorp.com/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script><script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samanta Corp</title>
@@ -38,7 +39,7 @@
       border-radius: 50%;
     }
 
-    header h1 {
+    h1 {
       display: inline-block;
       font-size: 2rem;
       margin: 0 0 0 1rem;
