--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,8 +4,8 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   <style>
+    <title>About Me - Deb Samanta</title>
+    <style>
     body {
         font-family: "Comic Sans MS", cursive, sans-serif;
         margin: 0;
@@ -89,26 +89,69 @@
     }
 </style>
 
+
 </head>
 <body>
     <header>
-        <h1>ITIS3135 Deb Samanta's Website </h1>
+        <h1>About Me - Deb Samanta</h1>
     </header>
     <main>
-        <h2>About This Page</h2>
-        <p>This is my awesome homepage where I share cool stuff!</p>
-        
-          <a href="itis3135/coursepage.html">Course Page</a>
-          <a href="https://github.com/dsamanta12344" target="_blank" rel="noopener noreferrer">Github</a>
-          <a href="https://dsamanta12344.github.io" target="_blank" rel="noopener noreferrer"> GitHub.io</a>
-    <a href="https://webpages.charlotte.edu/dsamanta/" target="_blank" rel="noopener noreferrer"> UNCC </a>
-    <a href="https://www.linkedin.com/in/deb-samanta-a7157037b/" target="_blank" rel="noopener noreferrer"> LinkedIn </a>
+        <!-- Profile Image -->
+        <img src="https://via.placeholder.com/150" alt="Profile picture of Deb Samanta" class="profile">
 
+        <!-- Personal Background -->
+        <section>
+            <h2>Personal Background</h2>
+            <p>I am Deb Samanta, and I enjoy learning new technologies, coding, and working on creative projects.</p>
+        </section>
 
-  
+        <!-- Professional Background -->
+        <section>
+            <h2>Professional Background</h2>
+            <p>I have some experience with programming and web development through school projects and self teaching./</p>
+        </section>
 
+        <!-- Academic Background -->
+        <section>
+            <h2>Academic Background</h2>
+            <p>I am currently pursuing a degree in Computer Science with a focus on information technology.</p>
+        </section>
+
+        <!-- Background in the Course -->
+        <section>
+            <h2>Background in This Course</h2>
+            <p>I have basic experience with python and java.</p>
+        </section>
+
+        <!-- Primary Computer Platform -->
+        <section>
+            <h2>Primary Computer Platform</h2>
+            <p>Windows 11 on a laptop is my primary platform, I am using a hp elitebook.</p>
+        </section>
+
+        <!-- Courses Taking -->
+        <section>
+            <h2>Courses I'm Taking</h2>
+            <ul>
+                <li>ITIS 3135 – Web-Based Application Design and Development</li>
+                <li>ITSC 3155 – Software Engineering</li>
+                <li>ITIS 3200 – Intro to Information Security</li>
+                <li>STAT 2122 – Probability and Statistics</li>
+            </ul>
+        </section>
+
+        <!-- Funny/Interesting Story -->
+        <section>
+            <h2>Funny or Interesting Story</h2>
+            <p>One time I forgot my wallet at the DMV!</p>
+        </section>
+
+        <!-- Something Else to Share -->
+        <section>
+            <h2>Something Else to Share</h2>
+            <p>Outside of tech I enjoy videogames and TV.</p>
+        </section>
     </main>
-  
     <footer>
         <p>Designed by Samanta Corp. All rights reserved.</p>
     </footer>
