--- a/itis3135/coursepage.html
+++ b/itis3135/coursepage.html
@@ -100,7 +100,7 @@
 
         <!-- Button links -->
         <a href="contract.html" class="button-link">View Course Contract</a>
-        <a href="introduction.html" class="button-link">About Me</a>
+        <a href="introduction.html" class="button-link">Introduction</a>
     </main>
     <footer>
         <p>Designed by Samanta Corp. All rights reserved.</p>
