--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -97,7 +97,7 @@
     </header>
     <main>
         <!-- Profile Image -->
-        <img src="https://via.placeholder.com/150" alt="Profile picture of Deb Samanta" class="profile">
+        <img src="pic.PNG" alt="Profile picture of Deb Samanta" class="profile">
 
         <!-- Personal Background -->
         <section>
@@ -143,7 +143,7 @@
         <!-- Funny/Interesting Story -->
         <section>
             <h2>Funny or Interesting Story</h2>
-            <p>One time I forgot my wallet at the DMV!</p>
+            <p>One time I forgot my wallet at the DMV.</p>
         </section>
 
         <!-- Something Else to Share -->
