--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h2>About This Page</h2>
         <p>This is my awesome homepage where I share cool stuff!</p>
         
-          <a href="itis3135/coursepage.html">Course Page</a>
+          <a href="itis3135/index.html">Course Page</a>
           <a href="https://github.com/dsamanta12344" target="_blank" rel="noopener noreferrer">Github</a>
           <a href="https://dsamanta12344.github.io" target="_blank" rel="noopener noreferrer"> GitHub.io</a>
     <a href="https://webpages.charlotte.edu/dsamanta/" target="_blank" rel="noopener noreferrer"> UNCC </a>
