--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </main>
   
     <footer>
-        <p>Designed by Samanta Corp. All rights reserved.</p>
+        <p>Designed by Samanta Corp ©2025. All rights reserved.</p>
     </footer>
 </body>
 </html>
