--- a/itis3135/SamantaCorp.com/index.html
+++ b/itis3135/SamantaCorp.com/index.html
@@ -130,7 +130,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Samanta Corp — Building a Greater Web</p>
+    <p>&copy; Samanta Corp ©2025 — Building a Greater Web</p>
   </footer>
 </body>
 </html>
