--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -103,7 +103,7 @@
         <a href="introduction.html" class="button-link">Introduction</a>
     </main>
     <footer>
-        <p>Designed by Samanta Corp. All rights reserved.</p>
+        <p>Designed by Samanta Corp ©2025. All rights reserved.</p>
     </footer>
 </body>
 </html>
