--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -123,7 +123,7 @@
         </p>
     </main>
     <footer>
-        <p>Designed by Samanta Corp. All rights reserved.</p>
+        <p>Designed by Samanta Corp ©2025. All rights reserved.</p>
     </footer>
 </body>
 </html>
