--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -153,7 +153,7 @@
         </section>
     </main>
     <footer>
-        <p>Designed by Samanta Corp. All rights reserved.</p>
+        <p>Designed by Samanta Corp ©2025. All rights reserved.</p>
     </footer>
 </body>
 </html>
