--- a/WebsiteEvaluation.html
+++ b/WebsiteEvaluation.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   <style>
+  <meta charset="UTF-8">
+  <title>Website Evaluations</title>
+  <link rel="stylesheet" href="default.css">
+</head>
+<body>
+  <header>
+    <h1>C.R.A.P Website Evaluation</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <!-- add other links here if needed -->
+      </ul>
+    </nav>
+  </header>
+<style>
 body {
     font-family: "Comic Sans MS", cursive, sans-serif;
     margin: 0;
@@ -93,32 +103,40 @@ footer {
 }
 </style>
 
+  <main>
+    <h2>Website Evaluations</h2>
 
-</head>
-<body>
-    <header>
-        <h1>ITIS3135 Deb Samanta's Website </h1>
-    </header>
-    <main>
-        <h2>About This Page</h2>
-        <p>This is my awesome homepage where I share cool stuff!</p>
-        
-         <a href="itis3135/index.html">Course Page</a>&nbsp;&nbsp;
-<a href="https://github.com/dsamanta12344" target="_blank" rel="noopener noreferrer">Github</a>&nbsp;&nbsp;
-<a href="https://dsamanta12344.github.io" target="_blank" rel="noopener noreferrer">GitHub.io</a>&nbsp;&nbsp;
-<a href="https://webpages.charlotte.edu/dsamanta/" target="_blank" rel="noopener noreferrer">UNCC</a>&nbsp;&nbsp;
-<a href="https://www.linkedin.com/in/deb-samanta-a7157037b/" target="_blank" rel="noopener noreferrer">LinkedIn</a>&nbsp;&nbsp;
-<a href="https://webpages.charlotte.edu/dsamanta/itis3135/DapperSloth/index.html" target="_blank" rel="noopener noreferrer">Dapper Sloth</a>&nbsp;&nbsp;
-<a href="WebsiteEvaluation.html">Website Evaluation</a>
+    <section>
+      <h3><a href="https://www.goodreads.com" target="_blank">Goodreads</a></h3>
+      <p>
+        Goodreads is a social cataloging site where readers can track, review, and share books. 
+        It allows users to build virtual bookshelves, connect with other readers, and explore 
+        community features, though its design has often been critiqued as outdated and cluttered.
+      </p>
+      <ul>
+        <li>
+          <strong>Contrast:</strong> Book covers and headings stand out, but the site overall has low 
+          visual hierarchy, too much text competes for attention.
+        </li>
+        <li>
+          <strong>Repetition:</strong> Core elements like book listings and shelves are consistently styled, 
+          but some sections feel inconsistent and dated, reducing unity.
+        </li>
+        <li>
+          <strong>Alignment:</strong> Many elements are arranged in grids or columns, but some pages feel cramped 
+          and misaligned, especially with sidebars and crowded content blocks.
+        </li>
+        <li>
+          <strong>Proximity:</strong> Book title, author, and rating are grouped well, but on busier pages 
+          related and unrelated items are often crammed together, creating clutter.
+        </li>
+      </ul>
+    </section>
 
+  </main>
 
-
-  
-
-    </main>
-  
-    <footer>
-        <p>Designed by Samanta Corp ©2025. All rights reserved.</p>
-    </footer>
+  <footer>
+   <p>Designed by Samanta Corp ©2025. All rights reserved.</p>
+  </footer>
 </body>
 </html>
