--- a/index.html
+++ b/index.html
@@ -5,95 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <style>
-body {
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(135deg, #ff9ff3, #feca57, #48dbfb);
-    color: #2d3436; /* dark grey for better readability */
-    text-shadow: 1px 1px rgba(255, 255, 255, 0.3); /* subtle for contrast */
-    animation: backgroundShift 20s infinite alternate;
-}
-
-@keyframes backgroundShift {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-}
-
-header {
-    background-color: #ff6b81;
-    color: #fff; /* white text improves readability on pink */
-    padding: 2rem;
-    text-align: center;
-    font-size: 2.5rem;
-    text-shadow: 2px 2px #57606f;
-    border-bottom: 5px dashed #1e90ff;
-    transform: rotate(-1deg);
-}
-
-main {
-    max-width: 800px;
-    margin: 2rem auto;
-    background: #ffeaa7;
-    padding: 2rem;
-    border-radius: 25px;
-    box-shadow: 10px 10px 30px rgba(0,0,0,0.3);
-    line-height: 1.9; /* increased line-height for readability */
-    border: 3px dotted #ff4757;
-    transform: rotate(0.5deg);
-    color: #2d3436; /* dark grey text */
-    font-size: 1.2rem; /* slightly larger for easier reading */
-}
-
-.profile {
-    display: block;
-    max-width: 180px;
-    border-radius: 50%;
-    margin: 0 auto 2rem;
-    border: 5px double #2ed573;
-    box-shadow: 0 0 15px #ff6b81, 0 0 25px #1e90ff inset;
-    transform: rotate(-5deg);
-}
-
-h2 {
-    text-align: center;
-    margin-bottom: 1.5rem;
-    color: #3742fa; /* bright blue */
-    font-size: 2rem;
-    text-shadow: 1px 1px #ff4757, 2px 2px #ffa502;
-    transform: skewX(-10deg);
-}
-
-section {
-    margin-bottom: 2rem;
-    background: #70a1ff;
-    padding: 1rem 1.5rem;
-    border-radius: 15px;
-    border: 2px dashed #ff9ff3;
-    transform: rotate(-0.5deg);
-    color: #fff; /* white text improves contrast with blue background */
-}
-
-section p, section ul {
-    font-size: 1.15rem; /* slightly larger text */
-    line-height: 1.7;
-}
-
-footer {
-    background-color: #2f3542;
-    color: #fffa65; /* bright yellow */
-    padding: 1rem;
-    text-align: center;
-    font-family: "Courier New", monospace;
-    border-top: 5px dotted #ff4757;
-    transform: rotate(0.5deg);
-    font-size: 1.1rem; /* larger for readability */
-}
-</style>
-
-
+   
+ <link rel="stylesheet" href="itis3135/styles.css">
 </head>
 <body>
     <header>
@@ -109,7 +22,7 @@ footer {
 <a href="https://webpages.charlotte.edu/dsamanta/" target="_blank" rel="noopener noreferrer">UNCC</a>&nbsp;&nbsp;
 <a href="https://www.linkedin.com/in/deb-samanta-a7157037b/" target="_blank" rel="noopener noreferrer">LinkedIn</a>&nbsp;&nbsp;
 <a href="https://webpages.charlotte.edu/dsamanta/itis3135/DapperSloth/index.html" target="_blank" rel="noopener noreferrer">Dapper Sloth</a>&nbsp;&nbsp;
-<a href="WebsiteEvaluation.html">Website Evaluation</a>
+
 
 
 
