--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -179,7 +179,7 @@
                 I acknowledge that this is a single assignment within the course and not broken out into 
                 parts like the previous certification and will take responsibility for pacing myself.
             </p>
-            <p>— [Your Name], [Date]</p>
+            <p>— [Deb Samanta], [10/6]</p>
         </section>
     </main>
 
