--- a/itis3135/fccfsjs_outline.html
+++ b/itis3135/fccfsjs_outline.html
@@ -85,80 +85,134 @@
 
     <main>
         <h2>FCC Full Stack JavaScript Outline</h2>
-        <p>This page provides an organized outline of the FreeCodeCamp Full Stack JavaScript curriculum.</p>
+        
 
-        <!-- Table -->
         <table>
-            <thead>
-                <tr>
-                    <th>Section</th>
-                    <th>Steps</th>
-                    <th>Description</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Code Editor Basics</td>
-                    <td>15</td>
-                    <td>Introduces the coding environment setup and basic commands.</td>
-                </tr>
-                <tr>
-                    <td>Variables and Strings</td>
-                    <td>62</td>
-                    <td>Covers declaring variables, working with strings, and manipulating text.</td>
-                </tr>
-                <tr>
-                    <td>Arrays</td>
-                    <td>50</td>
-                    <td>Explains how to store data in arrays, use indexes, loops, and array methods.</td>
-                </tr>
-                <tr>
-                    <td>Functions</td>
-                    <td>40</td>
-                    <td>Introduces reusable code blocks with parameters and return values.</td>
-                </tr>
-                <tr>
-                    <td>Objects</td>
-                    <td>45</td>
-                    <td>Explores object creation, properties, and methods as data structures.</td>
-                </tr>
-                <tr>
-                    <td>ES6 Features</td>
-                    <td>55</td>
-                    <td>Covers modern JavaScript features like let/const, arrow functions, and template literals.</td>
-                </tr>
-                <tr>
-                    <td>Debugging</td>
-                    <td>30</td>
-                    <td>Teaches strategies to identify and fix errors in JavaScript programs.</td>
-                </tr>
-                <tr>
-                    <td>Basic Algorithms</td>
-                    <td>35</td>
-                    <td>Introduces solving problems with loops, conditionals, and simple logic.</td>
-                </tr>
-                <tr>
-                    <td>Intermediate Algorithms</td>
-                    <td>45</td>
-                    <td>Builds more advanced problem-solving skills with recursion, sorting, and searching.</td>
-                </tr>
-                <tr>
-                    <td>Object Oriented Programming</td>
-                    <td>40</td>
-                    <td>Explains classes, constructors, prototypes, and reusable object structures.</td>
-                </tr>
-                <tr>
-                    <td>Functional Programming</td>
-                    <td>50</td>
-                    <td>Introduces higher-order functions, pure functions, and immutability concepts.</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3">This outline summarizes the FCC Full Stack JavaScript curriculum (partial listing shown).</td>
-                </tr>
-            </tfoot>
-        </table>
+  <thead>
+    <tr>
+      <th>Section</th>
+      <th>Steps</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td rowspan="2">Code Editor Basics</td>
+      <td>5</td>
+      <td>Introduces the coding environment setup and basic commands.</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Continues with additional editor features and shortcuts.</td>
+    </tr>
+    <tr>
+      <td>Variables and Strings</td>
+      <td>62</td>
+      <td>Covers declaring variables, working with strings, and manipulating text.</td>
+    </tr>
+    <tr>
+      <td>Booleans and Numbers</td>
+      <td>37</td>
+      <td>Explores boolean logic and numerical operations.</td>
+    </tr>
+    <tr>
+      <td>Arrays</td>
+      <td>50</td>
+      <td>Explains how to store data in arrays, use indexes, loops, and array methods.</td>
+    </tr>
+    <tr>
+      <td>Objects</td>
+      <td>45</td>
+      <td>Explores object creation, properties, and methods as data structures.</td>
+    </tr>
+    <tr>
+      <td>Loops</td>
+      <td>30</td>
+      <td>Teaches various looping techniques for iterating over data.</td>
+    </tr>
+    <tr>
+      <td>Functions</td>
+      <td>40</td>
+      <td>Introduces reusable code blocks with parameters and return values.</td>
+    </tr>
+    <tr>
+      <td>ES6 Features</td>
+      <td>55</td>
+      <td>Covers modern JavaScript features like let/const, arrow functions, and template literals.</td>
+    </tr>
+    <tr>
+      <td>Debugging</td>
+      <td>30</td>
+      <td>Teaches strategies to identify and fix errors in JavaScript programs.</td>
+    </tr>
+    <tr>
+      <td>Basic Algorithms</td>
+      <td>35</td>
+      <td>Introduces solving problems with loops, conditionals, and simple logic.</td>
+    </tr>
+    <tr>
+      <td>Intermediate Algorithms</td>
+      <td>45</td>
+      <td>Builds more advanced problem-solving skills with recursion, sorting, and searching.</td>
+    </tr>
+    <tr>
+      <td>Object Oriented Programming</td>
+      <td>40</td>
+      <td>Explains classes, constructors, prototypes, and reusable object structures.</td>
+    </tr>
+    <tr>
+      <td>Functional Programming</td>
+      <td>50</td>
+      <td>Introduces higher-order functions, pure functions, and immutability concepts.</td>
+    </tr>
+    <tr>
+      <td>Node.js</td>
+      <td>60</td>
+      <td>Introduces server-side JavaScript with Node.js.</td>
+    </tr>
+    <tr>
+      <td>Express.js</td>
+      <td>50</td>
+      <td>Covers building web applications with the Express.js framework.</td>
+    </tr>
+    <tr>
+      <td>MongoDB</td>
+      <td>45</td>
+      <td>Teaches NoSQL database concepts and operations with MongoDB.</td>
+    </tr>
+    <tr>
+      <td>React</td>
+      <td>70</td>
+      <td>Introduces building user interfaces with the React library.</td>
+    </tr>
+    <tr>
+      <td>React Hooks</td>
+      <td>50</td>
+      <td>Covers state and lifecycle features in React using hooks.</td>
+    </tr>
+    <tr>
+      <td>React Router</td>
+      <td>30</td>
+      <td>Teaches navigation between views in React applications.</td>
+    </tr>
+    <tr>
+      <td>React Context</td>
+      <td>40</td>
+      <td>Introduces context for managing global state in React.</td>
+    </tr>
+    <tr>
+      <td>Performance</td>
+      <td>30</td>
+      <td>Teaches techniques to optimize React application performance.</td>
+    </tr>
+    <tr>
+      <td>Testing</td>
+      <td>40</td>
+      <td>Introduces testing methodologies and tools for React applications.</td>
+    </tr>
+  </tbody>
+</table>
+
 
         <!-- Schedule Section -->
         <section class="schedule">
