--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -202,10 +202,142 @@
 
   </main>
 
-  <footer>
-    <p>Designed by Deb Samanta</p>
-  </footer>
+    <!-- Accessible, non-stretched footer with validator buttons and design credit -->
+<footer class="site-footer" aria-label="Site footer">
 
+  <div class="footer-inner">
+    <p class="credit">
+      Designed by Deb Samanta |
+      <a href="https://dsamanta12344.github.io/itis3135/SamantaCorp.com/" target="_blank" rel="noopener noreferrer" class="firm-link">
+        My Design Firm
+      </a>
+    </p>
+
+    <div class="validators" aria-hidden="false">
+      <!-- HTML5 validator -->
+      <a class="validator-btn" href="https://validator.w3.org/check?uri=referer"
+         target="_blank" rel="noopener noreferrer" aria-label="Validate HTML (opens in new tab)">
+        <!-- inline SVG — preserves aspect ratio perfectly -->
+        <svg class="icon" viewBox="0 0 128 128" aria-hidden="true" focusable="false" role="img">
+          <path fill="#E34F26" d="M19 0h90l-8 100-37 28-37-28z"></path>
+          <path fill="#EF652A" d="M64 114l30-21 7-78H64z"></path>
+          <path fill="#fff" d="M63 44h15l-1 17H63zM63 77l-.3.1-11-3-1.9-20h10l.5 5.5 2 .6.2-2.6h14l-.5 5L63 77z"></path>
+        </svg>
+        <span class="label">HTML5</span>
+      </a>
+
+      <!-- CSS validator -->
+      <a class="validator-btn" href="https://jigsaw.w3.org/css-validator/check/referer"
+         target="_blank" rel="noopener noreferrer" aria-label="Validate CSS (opens in new tab)">
+        <svg class="icon" viewBox="0 0 128 128" aria-hidden="true" focusable="false" role="img">
+          <path fill="#264DE4" d="M19 0h90l-8 100-37 28-37-28z"></path>
+          <path fill="#2965F1" d="M64 114l30-21 7-78H64z"></path>
+          <path fill="#fff" d="M36 36h56v12H36zM38 66h52v8H38zM42 86h44v6H42z"></path>
+        </svg>
+        <span class="label">CSS</span>
+      </a>
+
+      <!-- Accessibility / WAVE -->
+      <a class="validator-btn" href="https://wave.webaim.org/report"
+         target="_blank" rel="noopener noreferrer" aria-label="Accessibility check (opens in new tab)">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" role="img">
+          <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="1.5"></circle>
+          <path d="M7 12c1.5-3 4-4 5-4s3.5 1 5 4" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"></path>
+        </svg>
+        <span class="label">Accessibility</span>
+      </a>
+    </div>
+  </div>
+</footer>
+
+<style>
+  /* Footer layout */
+  .site-footer {
+    background: #0b0b0b;
+    color: #e6eef6;
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    padding: 1rem;
+  }
+
+  .footer-inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .credit {
+    margin: 0;
+    font-size: 0.95rem;
+  }
+
+  .firm-link {
+    color: #7fd3ff;
+    text-decoration: none;
+  }
+  .firm-link:focus,
+  .validator-btn:focus {
+    outline: 3px solid #7fd3ff50;
+    outline-offset: 3px;
+  }
+
+  /* Validator buttons */
+  .validators {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+  }
+
+  .validator-btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.35rem 0.6rem;
+    background: transparent;
+    border-radius: 6px;
+    text-decoration: none;
+    color: inherit;
+    font-size: 0.9rem;
+    border: 1px solid rgba(255,255,255,0.06);
+    transition: background .12s ease, transform .06s ease;
+  }
+
+  .validator-btn:hover {
+    background: rgba(255,255,255,0.03);
+    transform: translateY(-1px);
+  }
+
+  /* Icon sizing — preserves aspect ratio and prevents stretching */
+  .validator-btn .icon {
+    height: 24px;        /* desired icon height */
+    width: auto;         /* preserve aspect ratio */
+    display: block;
+    vertical-align: middle;
+    flex-shrink: 0;      /* don't let icon shrink smaller than height */
+  }
+
+  /* Hide text label visually on very small screens if needed */
+  .validator-btn .label {
+    white-space: nowrap;
+  }
+
+  /* Responsive: stack on narrow screens */
+  @media (max-width: 520px) {
+    .footer-inner {
+      flex-direction: column;
+      text-align: center;
+      gap: 0.75rem;
+    }
+    .validators { justify-content: center; }
+  }
+</style>
+
+
+
+  
   <script>
     function showSection(id, event) {
       event.preventDefault();
