--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -206,7 +206,7 @@
 <footer class="site-footer" aria-label="Site footer">
   <div class="footer-inner">
     <p class="credit">
-      Designed by Deb Samanta |
+      Designed by SamantaCorp|
       <a href="https://dsamanta12344.github.io/itis3135/SamantaCorp.com/" 
          target="_blank" 
          rel="noopener noreferrer" 
